--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: master
 media_folder: "src/uploads"
-public_folder: "/uploads"
+public_folder: "uploads/"
 collections:
   - name: "blog_en" # Used in routes, e.g., /admin/collections/blog
     label: "Blog English" # Used in the UI
