--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: master
-media_folder: "src/uploads"
+media_folder: "uploads/"
 public_folder: "uploads/"
 collections:
   - name: "blog_en" # Used in routes, e.g., /admin/collections/blog
